removed forms and added documentation refresh on build
